# MemoryLeakTesting

SomeClassVer1/: CMakeLists.txt  README  SomeClass.h  main.cpp
SomeClassVer2/: CMakeLists.txt  README  SomeClass.h
SomeClassVer3_1/: CMakeLists.txt  README  SomeClass.h  main.cpp
SomeClassVer3_2/: CMakeLists.txt  README  SomeClass.h  main.cpp
